--- a/socket_testing/Makefile
+++ b/socket_testing/Makefile
@@ -27,8 +27,9 @@ proto_middleman: $(PROTO_DIR)/*.proto
 # server.o: $(SRC_DIR)/server.cc
 # 	$(CCX) $(CFLAGS) -c $^ -o $(ODIR)/$@
 
-server: $(SRC_DIR)/RaftGlobals.cc $(SRC_DIR)/socket.cc $(SRC_DIR)/server.cc \
-		$(PROTO_DIR)/test.pb.cc $(SRC_DIR)/Common/*.cc
+server: $(SRC_DIR)/RaftGlobals.cc $(SRC_DIR)/Socket.cc $(SRC_DIR)/server.cc \
+		$(PROTO_DIR)/test.pb.cc $(SRC_DIR)/Common/*.cc \
+		$(SRC_DIR)/SocketManager.cc
 	$(CCX) $(CFLAGS) $(LIBS) $^ -o $(BLD_DIR)/$@
 	export DYLD_LIBRARY_PATH=../install/runtime_libs/
 
