--- a/socket_testing/src/server.cfg
+++ b/socket_testing/src/server.cfg
@@ -10,6 +10,11 @@ listenAddress = "127.0.0.1";
 raftPort = 1234;
 
 /**
+  * The maximum number of incoming connections to handle.
+  */
+maxConnections = 10;
+
+/**
   * A list of server information. Specifically their unique ID and
   * the IP address they are listening for incoming connections on.
   */
