--- a/socket_testing/src/RaftServer/server.cfg
+++ b/socket_testing/src/RaftServer/server.cfg
@@ -11,17 +11,27 @@ raftPort = 1234;
 
 /**
   * The maximum number of incoming connections to handle.
+  * TODO: Think of better number here?
   */
 maxConnections = 10;
+
+/**
+  * This server's ID
+  */
+serverId = 1;
 
 /**
   * A list of server information. Specifically their unique ID and
   * the IP address they are listening for incoming connections on.
   */
 
-servers = ( { id = 1;
+servers = ( { id = 2;
              address = "127.0.0.1"; } );
 
-logFile = "RaftLog.log";
+/**
+  * Path of file that contains log. We call the server executable from the home
+  * directory so path is relative to root of Raft repo.
+  */
+logPath = "./RaftLog.log";
 
 
