joined in socket thread

--- a/socket_thread_testing/config_ID_1.cfg
+++ b/socket_thread_testing/config_ID_1.cfg
@@ -26,9 +26,11 @@ serverId = 1;
   */
 
 servers = ( { id = 2;
-             address = "127.33.33.33"; },
-             { id = 3;
-             address = "192.168.33.3"; } );
+             address = "127.0.0.1"; 
+             port = 2222; },
+            { id = 3;
+             address = "127.0.0.1"; 
+             port = 4321; } );
 
 /**
   * Path of file that contains log. We call the server executable from the home
