--- a/socket_thread_testing/config_ID_2.cfg
+++ b/socket_thread_testing/config_ID_2.cfg
@@ -7,7 +7,7 @@ listenAddress = "127.0.0.1";
 /**
   * The port used for Raft.
   */
-raftPort = 1234;
+raftPort = 2222;
 
 /**
   * The maximum number of incoming connections to handle.
@@ -26,9 +26,11 @@ serverId = 2;
   */
 
 servers = ( { id = 1;
-             address = "127.0.0.1"; },
-             { id = 3;
-             address = "192.168.33.3"; } );
+             address = "127.0.0.1"; 
+             port = 1234; },
+            { id = 3;
+             address = "127.0.0.1"; 
+             port = 4321; } );
 
 /**
   * Path of file that contains log. We call the server executable from the home
