--- a/socket_thread_testing/config_ID_3.cfg
+++ b/socket_thread_testing/config_ID_3.cfg
@@ -7,7 +7,7 @@ listenAddress = "192.168.33.3";
 /**
   * The port used for Raft.
   */
-raftPort = 1234;
+raftPort = 4321;
 
 /**
   * The maximum number of incoming connections to handle.
@@ -26,9 +26,11 @@ serverId = 3;
   */
 
 servers = ( { id = 1;
-             address = "127.0.0.1"; },
-             { id = 2;
-             address = "192.168.33.2"; } );
+             address = "127.0.0.1"; 
+             port = 1234; },
+            { id = 2;
+             address = "127.0.0.1"; 
+             port = 2222; } );
 
 /**
   * Path of file that contains log. We call the server executable from the home
