--- a/proj2/Makefile
+++ b/proj2/Makefile
@@ -12,11 +12,11 @@ OBJECTS=$(patsubst %.c, %.o, $(SOURCES))
 CFLAGS += -Wall -Werror -std=c++20
 
 CFLAGS += $(shell export PKG_CONFIG_PATH=../install/lib/pkgconfig; \
-			 pkg-config --cflags protobuf libconfig++)
+			 pkg-config --cflags protobuf libconfig)
 
 
 LIBS := $(shell export PKG_CONFIG_PATH=../install/lib/pkgconfig; \
-		  pkg-config --cflags --libs protobuf libconfig++)
+		  pkg-config --cflags --libs protobuf libconfig)
 
 # -o specifies the output fiule
 all: proto_middleman server client
