Adding generic interface and changing config to match

--- a/proj2/config_ID_3.cfg
+++ b/proj2/config_ID_3.cfg
@@ -2,12 +2,7 @@
   * The address for the server to listen on for incoming client requests. This
   * is 127.0.0.1 for testing but should be
   */
-listenAddress = "127.0.0.1";
-
-/**
-  * The port used for Raft.
-  */
-raftPort = 4421;
+listenAddress = "127.0.0.1:4421";
 
 /**
   * The maximum number of incoming connections to handle.
@@ -26,11 +21,10 @@ serverId = 3;
   */
 
 servers = ( { id = 1;
-             address = "127.0.0.1"; 
+             address = "127.0.0.1:1234"; 
              port = 1234; },
             { id = 2;
-             address = "127.0.0.1"; 
-             port = 2222; } );
+             address = "127.0.0.1:2222"; } );
 
 /**
   * Path of file that contains log. We call the server executable from the home
