--- a/proj2/config_ID_2.cfg
+++ b/proj2/config_ID_2.cfg
@@ -2,12 +2,7 @@
   * The address for the server to listen on for incoming client requests. This
   * is 127.0.0.1 for testing but should be
   */
-listenAddress = "127.0.0.1";
-
-/**
-  * The port used for Raft.
-  */
-raftPort = 2222;
+listenAddress = "127.0.0.1:2222";
 
 /**
   * The maximum number of incoming connections to handle.
@@ -26,11 +21,9 @@ serverId = 2;
   */
 
 servers = ( { id = 1;
-             address = "127.0.0.1"; 
-             port = 1234; },
+             address = "127.0.0.1:1234"; },
             { id = 3;
-             address = "127.0.0.1"; 
-             port = 4421; } );
+             address = "127.0.0.1:4421"; } );
 
 /**
   * Path of file that contains log. We call the server executable from the home
