Intergrating networking and protobuf changes

--- a/proj2/config_ID_3.cfg
+++ b/proj2/config_ID_3.cfg
@@ -30,6 +30,6 @@ servers = ( { id = 1;
   * Path of file that contains log. We call the server executable from the home
   * directory so path is relative to root of Raft repo.
   */
-logPath = "./RaftLog.log";
+persistentStoragePath = "./RaftLog.log";
 
 
