--- a/proj2/config_ID_1.cfg
+++ b/proj2/config_ID_1.cfg
@@ -29,6 +29,6 @@ servers = ( { id = 2;
   * Path of file that contains log. We call the server executable from the home
   * directory so path is relative to root of Raft repo.
   */
-logPath = "./RaftLog.log";
+persistentStoragePath = "./RaftLog.log";
 
 
