Two way connections

--- a/proj2/config_client.cfg
+++ b/proj2/config_client.cfg
@@ -1,12 +1,7 @@
 /**
   * The address for the RaftClient
   */
-listenAddress = "127.0.0.1";
-
-/**
-  * The port used for RaftClient.
-  */
-raftPort = 1234;
+listenAddress = "127.0.0.1:1234";
 
 /**
   * A list of server information. Specifically their unique ID and
@@ -14,14 +9,11 @@ raftPort = 1234;
   */
 
 servers = ( { id = 1;
-             address = "127.0.0.1"; 
-             port = 1234; },
+             address = "127.0.0.1:1002"; },
              { id = 2;
-             address = "127.0.0.1"; 
-             port = 2222; },
+             address = "127.0.0.1:2002"; },
             { id = 3;
-             address = "127.0.0.1"; 
-             port = 4421; } );
+             address = "127.0.0.1:3002"; } );
 
 
 
