--- a/proj2/config_ID_3.cfg
+++ b/proj2/config_ID_3.cfg
@@ -1,8 +1,16 @@
 /**
-  * The address for the server to listen on for incoming client requests. This
-  * is 127.0.0.1 for testing but should be
+  * The Raft server acts as a network client on this address.
+  * The Raft Server sends RPC requests to other Raft Servers and receives
+  * the corresponding responses on this address.
   */
-listenAddress = "127.0.0.1:4421";
+clientAddress = "127.0.0.3001";
+
+/**
+  * The Raft server acts as a network server on this address.
+  * The Raft Server to listen on for incoming RPC requests and sends RPC
+  * responses on this address.
+  */
+serverAddress = "127.0.0.1:3002";
 
 /**
   * The maximum number of incoming connections to handle.
@@ -21,10 +29,11 @@ serverId = 3;
   */
 
 servers = ( { id = 1;
-             address = "127.0.0.1:1234"; 
-             port = 1234; },
+             clientAddress = "127.0.0.1:1001";
+             serverAddress = "127.0.0.1:1002";},
             { id = 2;
-             address = "127.0.0.1:2222"; } );
+              clientAddress = "127.0.0.1:2001";
+              serverAddress = "127.0.0.2002";} );
 
 /**
   * Path of file that contains log. We call the server executable from the home
