Setting up the Raft Client and adding requestId to the client requests to allow for tracking in raft client

--- a/proj2/Makefile
+++ b/proj2/Makefile
@@ -20,7 +20,7 @@ LIBS := $(shell export PKG_CONFIG_PATH=../install/lib/pkgconfig; \
 
 # -o specifies the output fiule
 #all: proto_middleman server client
-all: proto_middleman server
+all: proto_middleman server client
 
 proto_middleman: $(PROTO_DIR)/*.proto
 	protoc -I $(PROTO_DIR) --cpp_out=$(PROTO_DIR) $^
@@ -30,7 +30,7 @@ server: $(SRC_DIR)/RaftServer/*.cc $(PROTO_DIR)/RaftRPC.pb.cc \
 	$(CCX) $(CFLAGS) $(LIBS) -I $(SRC_DIR) $^ -o $(BLD_DIR)/$@
 	export DYLD_LIBRARY_PATH=../install/runtime_libs/
 
-client: $(PROTO_DIR)/RaftRPC.pb.cc $(SRC_DIR)/RaftClient/client.cc \
+client: $(PROTO_DIR)/RaftRPC.pb.cc $(SRC_DIR)/RaftClient/*.cc \
 		$(SRC_DIR)/Common/*.cc
 	$(CCX) $(CFLAGS) $(LIBS) -I $(SRC_DIR) $^ -o $(BLD_DIR)/$@
 
