--- a/proj2/config_ID_1.cfg
+++ b/proj2/config_ID_1.cfg
@@ -22,9 +22,9 @@ serverId = 1;
   */
 
 servers = ( { id = 2;
-             serverAddress = "127.0.0.1:2002";},
+              address = "127.0.0.1:2002";},
             { id = 3;
-              serverAddress = "127.0.0.1:3002";} );
+              address = "127.0.0.1:3002";} );
 
 /**
   * Path of file that contains log. We call the server executable from the home
