--- a/proj2/config_ID_3.cfg
+++ b/proj2/config_ID_3.cfg
@@ -22,9 +22,9 @@ serverId = 3;
   */
 
 servers = ( { id = 1;
-             serverAddress = "127.0.0.1:1052";},
+              address = "127.0.0.1:1052";},
             { id = 2;
-              serverAddress = "127.0.0.1:2002";} );
+              address = "127.0.0.1:2002";} );
 
 /**
   * Path of file that contains log. We call the server executable from the home
