--- a/hot_stuff_draft1/configs.json
+++ b/hot_stuff_draft1/configs.json
@@ -1,29 +1,29 @@
 {
   "clients": [
-    { "id": 0, "public_key": "client_key_0" },
-    { "id": 1, "public_key": "client_key_1" }
+    { "id": "c0", "public_key": "client_key_0" },
+    { "id": "c1", "public_key": "client_key_1" }
   ],
   "replicas": [
     {
-      "id": 0,
+      "id": "r0",
       "host": "localhost",
       "port": 8000,
       "public_key": "replica_key_0"
     },
     {
-      "id": 1,
+      "id": "r1",
       "host": "localhost",
       "port": 8001,
       "public_key": "replica_key_1"
     },
     {
-      "id": 2,
+      "id": "r2",
       "host": "localhost",
       "port": 8002,
       "public_key": "replica_key_2"
     },
     {
-      "id": 3,
+      "id": "r3",
       "host": "localhost",
       "port": 8003,
       "public_key": "replica_key_3"
