Docker compose works to replicas and logging. Clients still started manually

--- a/hot_stuff_draft1/src/logging.ini
+++ b/hot_stuff_draft1/src/logging.ini
@@ -46,7 +46,7 @@ args=('http://localhost:5080/api/default/default/_json', 'root@example.com', 'Co
 
 [formatter_json]
 class=pythonjsonlogger.jsonlogger.JsonFormatter
-format=%(asctime)s %(name)s %(levelname)s %(message)s
+format=%(name)s %(levelname)s %(message)s
 
 [formatter_simpleFormatter]
 format=%(asctime)s %(name)s - %(levelname)s:%(message)s
