Revert "Revert "Add logging changes""
This reverts commit 79de339db6e20d327a949c476465bb0c95929891.

--- a/hot_stuff_draft1/Dockerfile
+++ b/hot_stuff_draft1/Dockerfile
@@ -17,3 +17,10 @@ CMD ["python", "client.py"]
 FROM base as crypto
 CMD ["python" "crypto.py"]
 
+FROM base as logger
+RUN wget https://github.com/openobserve/openobserve/releases/download/v0.10.7-rc2/openobserve-v0.10.7-rc2-linux-arm64.tar.gz
+RUN tar -xvf openobserve-v0.10.7-rc2-linux-arm64.tar.gz
+EXPOSE 5080
+ENV ZO_ROOT_USER_EMAIL=root@example.com
+ENV ZO_ROOT_USER_PASSWORD=Complexpass#123
+CMD ["./openobserve"]
