--- a/compose.yaml
+++ b/compose.yaml
@@ -16,15 +16,16 @@ services:
   #     context: .
   #     target: client_random_kv
   #   network_mode: host
-  #   ports:
-  #     - "8080:8080"
+  #   # ports:
+  #   #   - "8080:8080"
   #   environment:
   #     - CLIENT_ID=c0
   #   depends_on:
   #     logger:
   #       condition: service_healthy
-  #   tty: true
-  #   stdin_open: true
+  #   # tty: true
+  #   # stdin_open: true
+  #   restart: unless-stopped
   replica0:
     build:
       context: .
