--- a/src/logging.ini
+++ b/src/logging.ini
@@ -34,7 +34,7 @@ qualname=replica_server
 
 [handler_consoleHandler]
 class=StreamHandler
-level=DEBUG
+level=INFO
 formatter=simpleFormatter
 args=(sys.stdout,)
 
