--- a/compose.yaml
+++ b/compose.yaml
@@ -25,7 +25,7 @@ services:
   #       condition: service_healthy
   #   # tty: true
   #   # stdin_open: true
-  #   restart: unless-stopped
+  #   # restart: unless-stopped
   replica0:
     build:
       context: .
