--- a/compose.yaml
+++ b/compose.yaml
@@ -36,16 +36,16 @@ services:
     depends_on:
       logger:
         condition: service_healthy
-  # replica1:
-  #   build:
-  #     context: .
-  #     target: replica
-  #   network_mode: host
-  #   environment:
-  #     - REPLICA_ID=r1
-  #   depends_on:
-  #     logger:
-  #       condition: service_healthy
+  replica1:
+    build:
+      context: .
+      target: replica
+    network_mode: host
+    environment:
+      - REPLICA_ID=r1
+    depends_on:
+      logger:
+        condition: service_healthy
   replica2:
     build:
       context: .
